<resources>
    <string name="app_name">Dots</string>
    <string name="action_settings">Settings</string>

    <string name="main_screen_title">Dots</string>
    <string name="main_screen_play">Play</string>
    <string name="main_screen_options">Options</string>
    <string name="main_screen_high_scores">High Scores</string>

    <string name="title_activity_board_selector">BoardSelector</string>
    <string name="board_selector_title">Choose your game nerd</string>
    <string name="board_selector_six">6x6</string>
    <string name="board_selector_eight">8x8</string>

    <string name="title_activity_game">GameActivity</string>

    <string name="title_activity_high_scores">HighScores</string>
    <string name="high_scores_title_six">6x6 High Scores</string>
    <string name="high_scores_title_eight">8x8 High Scores</string>
    <string name="title_activity_set_high_score">SetHighScoreActivity</string>

    <string name="set_high_score_title">Nice job buddy!</string>
    <string name="set_high_score_score_msg">Your score: </string>
    <string name="set_high_score_username">Pick a username mate</string>

    <string name="title_activity_options">OptionsActivity</string>

    <string name="game_score">Score</string>
    <string name="game_moves">Moves</string>
</resources>
