<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="30dp" android:paddingLeft="30dp"
    android:paddingTop="0dp" android:orientation="vertical"
    android:paddingBottom="0dp" tools:context=".MainActivity" >

    <TextView
        android:text="@string/main_screen_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="fill_parent"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_above="@+id/buttons"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:id="@+id/buttons">
        <Button
            android:id="@+id/btnPlay"
            android:onClick="onPlayClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_play"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/purple_button" />

        <Button
            android:id="@+id/btnOptions"
            android:onClick="onOptionsClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_options"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_button" />

        <Button
            android:id="@+id/btnHighScores"
            android:onClick="onHighScoresClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_high_scores"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_button" />
    </LinearLayout>

</RelativeLayout>
