<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="30dp" android:paddingLeft="30dp"
        android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="nett.arnar.atli.dots.BoardSelector"
        android:layout_centerHorizontal="true" >

    <TextView
        android:text="@string/board_selector_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSixTiles"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/board_selector_six"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button" />

    <Button
        android:id="@+id/btnEightTiles"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/board_selector_eight"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button" />

</LinearLayout>
